Bug 114837 - FILEOPEN: Image is blank
Summary: FILEOPEN: Image is blank
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Impress-Images
  Show dependency treegraph
 
Reported: 2018-01-04 18:07 UTC by Xisco Faulí
Modified: 2018-01-08 10:05 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (65.50 KB, application/vnd.ms-powerpoint)
2018-01-04 18:07 UTC, Xisco Faulí
Details
comparison MSO 2010 and LibreOffice 6.1 (126.94 KB, image/png)
2018-01-04 18:08 UTC, Xisco Faulí
Details
sample2 (147.00 KB, application/vnd.ms-powerpoint)
2018-01-04 18:12 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-01-04 18:07:49 UTC
Created attachment 138881 [details]
sample

Steps to reproduce:
1. Open the attached document
2. Check the image on the bottom left corner. see attached image

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 2bf1cc7372088ec31ac5f0fb60de57feda59d3b7
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-01-04 18:08:48 UTC
Created attachment 138882 [details]
comparison MSO 2010 and LibreOffice 6.1
Comment 2 Xisco Faulí 2018-01-04 18:10:13 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2017-12-12 09:33:14 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2017-12-13 11:00:40 +0100
commit e75abe6e0a4ea250366bb29c0ece697e9b1b80a1 (patch)
tree 9f6f945bdf57feab0e8f71bec331f220f49166b0
parent 6ca6d6ac912588a8f62d7e6b668ebec333752ebc (diff)
convert tolerance params to sal_uInt8
since their range is 0-255

Also drop pTols from ImplColReplaceParam, since it is always nullptr.

Bisected with: bibisect-linux64-6.1

Adding Cc: to Noel Grandin
Comment 3 Xisco Faulí 2018-01-04 18:12:08 UTC
Created attachment 138883 [details]
sample2

Another document affected  by the same issue
Comment 4 Commit Notification 2018-01-05 11:03:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7accac097688832d8682a88a0176c3e1482ffade

tdf#114837 FILEOPEN: Image is blank

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-01-08 10:05:37 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 0ef0740298b45379bbf8d00d50beffee7a2f812a
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded