tdf#114837 FILEOPEN: Image is blank

revert

    commit e75abe6e0a4ea250366bb29c0ece697e9b1b80a1
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Dec 12 09:33:14 2017 +0200
    convert tolerance params to sal_uInt8

for now.

Change-Id: Iafaada0fb338f60ecc9f94aafe138500dfb27cf7
Reviewed-on: https://gerrit.libreoffice.org/47453
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>